# SVA-Project

./: .gitignore  README.md
Aufgabe_1/: README.md  main.py  pyproject.toml
Aufgabe_2/: .gitignore  README.md  main.py  pyproject.toml
Aufgabe_2/infra/: main.tf  output.tf  variables.tf  versions.tf
Aufgabe_2/src/highest_e10_2023/: cli.py  job.py  logging.py  spark.py
Aufgabe_2/tests/: conftest.py  test_job.py
Aufgabe_3/: README.md  main.py  pyproject.toml
